--- a/includes/css/editor.css
+++ b/includes/css/editor.css
@@ -121,3 +121,56 @@ span.components-base-control__label {
 	background: #757576;
 	color: #fff;
 }
+
+/* Color Pallete */
+.esab__color_picker {
+	display: flex;
+	align-items: center;
+	position: relative;
+	margin: 16px 0;
+}
+
+p.esab__color_picker_label {
+	margin: 0;
+	flex-grow: 1;
+}
+
+.esab__reset_color span.dashicon {
+	font-size: 14px;
+	margin-right: 5px;
+	line-height: 20px;
+	cursor: pointer;
+}
+
+button.esab__color_indicator {
+	width: 25px;
+	height: 25px;
+	background: none;
+	border: none;
+	cursor: pointer;
+	position: relative;
+}
+
+button.esab__color_indicator span.component-color-indicator {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-image: linear-gradient(45deg, #ddd 25%, transparent 0),
+		linear-gradient(-45deg, #ddd 25%, transparent 0),
+		linear-gradient(45deg, transparent 75%, #ddd 0),
+		linear-gradient(-45deg, transparent 75%, #ddd 0);
+	background-size: 10px 10px;
+	background-position: 0 0, 0 5px, 5px -5px, -5px 0;
+}
+
+.esab__color_pallete_container {
+	position: absolute;
+	right: 25px;
+	top: 20px;
+}
+
+.esab__color_picker .components-base-control {
+	padding: 0 16px;
+}
