--- a/src/blocks/accordion/editor.scss
+++ b/src/blocks/accordion/editor.scss
@@ -4,7 +4,7 @@
 .wp-block-esab-accordion {
 	display: block;
 	.block-editor-block-list__layout {
-		display: flex;
+		display: block;
 		flex-direction: column;
 		justify-content: space-between;
 		.block-list-appender {
