--- a/src/blocks/accordion/editor.scss
+++ b/src/blocks/accordion/editor.scss
@@ -1,6 +1,11 @@
 /*
 * Style Works for Editor Only
 */
+
+.esab_input__controls .components-input-control__label {
+	font-size: 9px !important;
+}
+
 .wp-block-esab-accordion {
 	display: block;
 	.block-editor-block-list__layout {
